DPO-932 routes for each long distance train