@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.google.common.base.Strings;
+import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import fi.livi.rata.avoindata.updater.service.gtfs.entities.Route;
 import fi.livi.rata.avoindata.updater.service.gtfs.entities.Stop;
@@ -53,9 +54,15 @@ public class GTFSRouteService {
 
     private String getRouteId(final Trip trip) {
         final StopTime firstStop = trip.stopTimes.get(0);
-        final StopTime lastStop = trip.stopTimes.get(trip.stopTimes.size() - 1);
-        final Long id = new Long(String.format("%s_%s_%s_%s_%s", firstStop.stopId, lastStop.stopId, trip.source.commuterLineId,
-                gtfsTrainTypeService.getGtfsTrainType(trip.source), trip.source.operator.operatorUICCode).hashCode()) + Integer.MAX_VALUE;
+        final StopTime lastStop = Iterables.getLast(trip.stopTimes);
+        Long id;
+        if (!Strings.isNullOrEmpty(trip.source.commuterLineId)) {
+            id = Long.valueOf(String.format("%s_%s_%s_%s_%s", firstStop.stopId, lastStop.stopId, trip.source.commuterLineId,
+                    gtfsTrainTypeService.getGtfsTrainType(trip.source), trip.source.operator.operatorUICCode).hashCode()) + Integer.MAX_VALUE;
+        } else {
+            id = Long.valueOf(String.format("%s_%s_%s_%s_%s", firstStop.stopId, lastStop.stopId, trip.source.trainNumber,
+                    gtfsTrainTypeService.getGtfsTrainType(trip.source), trip.source.operator.operatorUICCode).hashCode()) + Integer.MAX_VALUE;
+        }
         return id.toString();
     }
 }
